# Qwen3-TTS-FastAPI

./: .env.example  .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  pyproject.toml
api/: main.py
api/src/core/: config.py  openai_mappings.json  paths.py
api/src/inference/: __init__.py  qwen3_tts_backend.py  qwen3_tts_model_manager.py
api/src/routers/: __init__.py  openai_compatible.py
api/src/services/: qwen3_tts_service.py
api/src/services/text_processing/: __init__.py  normalizer.py  segmentation.py
api/src/structures/: __init__.py  schemas.py
docs/: API_TEST_SCRIPTS_DOCS.md  INFERENCE_BACKEND_DOCS.md  INFERENCE_MODEL_MANAGER_DOCS.md  MAIN_DOCS.md  PATHS_DOCS.md  ROUTERS_DOCS.md  SERVICES_DOCS.md  STRUCTURES_DOCS.md  TEXT_PROCESSING_DOCS.md
examples/: __init__.py  test_model_base_large.py  test_model_base_small.py  test_model_custom_voice.py  test_model_voice_design.py  test_streaming_segmentation.py
models/: download_models.py
scripts/: install-cpu.sh  install-cu126.sh  install-cu128.sh  install-cu130.sh
